--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Student Management System using Spring Boot and Thymeleaf</description>
 	<properties>
 		<java.version>16</java.version>
+		<property name="hbm2ddl.auto">update</property>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -55,11 +57,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.10</version>
-			<scope>compile</scope>
+			<version>1.18.22</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
